testsuite/tests/grammar/invalid_lexers/spacing_2.lkt
import common

lexer foo_lexer {
    @unparse_spacing(with=1)
    family fam {
        example <- "example"
    }
}
